/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.v1;

import "google/protobuf/duration.proto";
import "gogoproto/gogo.proto";

message MultiRaftConfig {
    google.protobuf.Duration heartbeat_period = 1 [
        (gogoproto.stdduration) = true
    ];
    google.protobuf.Duration election_timeout = 2 [
        (gogoproto.stdduration) = true
    ];
    uint64 snapshot_entry_threshold = 3;
    uint64 compaction_retain_entries = 4;
}

message PartitionConfig {
    uint32 partition_id = 1 [
        (gogoproto.customname) = "PartitionID",
        (gogoproto.casttype) = "PartitionID"
    ];
    repeated MemberConfig members = 2 [
        (gogoproto.nullable) = false
    ];
}

message MemberConfig {
    uint64 node_id = 1 [
        (gogoproto.customname) = "NodeID",
        (gogoproto.casttype) = "NodeID"
    ];
    string host = 2;
    int32 port = 3;
    Role role = 4;

    enum Role {
        UNKNOWN = 0;
        MEMBER = 1;
        OBSERVER = 2;
        WITNESS = 3;
    }
}
